[TASK] Add OrderItemCleanupCommand
Relates: #730

--- a/Configuration/Services.yaml
+++ b/Configuration/Services.yaml
@@ -6,7 +6,9 @@ services:
 
   Extcode\Cart\:
     resource: '../Classes/*'
-    exclude: '../Classes/Widgets/*'
+    exclude:
+      - '../Classes/Widgets/*'
+      - '../Classes/Command/*'
 
   Extcode\Cart\EventListener\Template\Components\ModifyButtonBar:
     tags:
